Initial support for MacOS:
* Using AVFoundation for frame and audio samples
* Fixed to 2-ch audio
* Basic mouse and keyboard support
* No Gamepad
* Very limited performance/memory optimizations

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "third-party/miniupnp"]
 	path = third-party/miniupnp
 	url = https://github.com/miniupnp/miniupnp
+[submodule "sunshine/platform/macos/TPCircularBuffer"]
+	path = sunshine/platform/macos/TPCircularBuffer
+	url = https://github.com/michaeltyson/TPCircularBuffer
