--- a/assets/sunshine.conf
+++ b/assets/sunshine.conf
@@ -131,6 +131,10 @@
 # to stream audio, while muting the speakers.
 # virtual_sink = {0.0.0.00000000}.{8edba70c-1125-467c-b89c-15da389bc1d4}
 
+#
+# !! MacOS only !!
+# audio_sink = BlackHole 2ch
+
 # !! Windows only !!
 # You can select the video card you want to stream:
 # The appropriate values can be found using the following command:
@@ -187,6 +191,16 @@
 # sw_preset  = superfast
 # sw_tune    = zerolatency
 #
+# !! MacOS only !!
+# Set the capture resolution.
+# With software endcoding, resizing each frame is extremly CPU heavy. Therfore,
+# the performance can be improved by capturing the right size. Currently,
+# Sunshine's architecture does not support changing the capture resolution for
+# each connection dynamically. This parameter does allow to do it manually.
+# If you experience performance issue try setting it to the stream resolution.
+# sw_width = 1920
+# sw_height = 1080
+
 
 ##################################### NVENC #####################################
 ###### presets ###########
