Add support for encoding through the VideoToolbox framework
This commit enables video encoding by the Apple proprietary VideoToolbox framework, which uses hardware accelerated video encoding on supported platforms. The VideoToolbox framework is wrapped by ffmpeg. As of now, the wrapping has a bug in ffmpeg (http://trac.ffmpeg.org/ticket/9231), which will corrupt the video stream. A fix is trivial (http://ffmpeg.org/pipermail/ffmpeg-devel/2021-July/282520.html) but not yet included in upstream.

--- a/assets/sunshine.conf
+++ b/assets/sunshine.conf
@@ -274,6 +274,18 @@
 #       VAProfileH264High   : VAEntrypointEncSlice
 # adapter_name = /dev/dri/renderD128
 
+################################# VideoToolbox ###############################
+####### software encoding ##########
+# Video Toolbox can be allowed/required to use software encoding instead of
+# hardware accelerated encoding.
+# vt_allow_sw = 0
+# vt_require_sw = 0
+####### realtime encoding ##########
+# Realtime encoding is activated by default. Deactivating might result in a
+# delayed frame encoding or frame drop
+# vt_realtime = 1
+
+
 ##############################################
 # Some configurable parameters, are merely toggles for specific features
 # The first occurrence turns it on, the second occurence turns it off, the third occurence turns it on again, etc, etc
