Improve configuration for MacOS

--- a/assets/sunshine.conf
+++ b/assets/sunshine.conf
@@ -279,12 +279,24 @@
 ####### software encoding ##########
 # Video Toolbox can be allowed/required to use software encoding instead of
 # hardware accelerated encoding.
-# vt_allow_sw = 0
-# vt_require_sw = 0
+# auto      -- let sunshine decide on encoding
+# disabled  -- disable software encoding
+# allowed   -- allow software encoding
+# forced    -- force software encoding
+##########################
+# vt_software = auto
+#
 ####### realtime encoding ##########
-# Realtime encoding is activated by default. Deactivating might result in a
-# delayed frame encoding or frame drop
-# vt_realtime = 1
+# Disabling realtime encoding might result in a delayed frame encoding or frame drop
+##########################
+# vt_realtime = enabled
+#
+###### h264/hevc entropy ######
+# auto -- let ffmpeg decide the entropy encoding
+# cabac
+# cavlc
+##########################
+# vt_coder = auto
 
 
 ##############################################
