--- a/assets/sunshine.conf
+++ b/assets/sunshine.conf
@@ -26,7 +26,7 @@
 # fatal   = [5]
 # none    = [6]
 #
-# min_log_level = verbose
+# min_log_level = info
 
 # The origin of the remote endpoint address that is not denied for HTTP method /pin
 # Could be any of the following values:
@@ -204,11 +204,12 @@
 #   amdvce # NOTE: alpha stage. The cursor is not yet displayed
 #   software
 #
-# encoder = software
+# encoder = nvenc
 ##################################### Software #####################################
 # See x264 --fullhelp for the different presets
 # sw_preset  = superfast
 # sw_tune    = zerolatency
+#
 
 ##################################### NVENC #####################################
 ###### presets ###########
